# VLP

./: README.md
DSP_FFT/: CMakeLists.txt  nrf52840_mdk.overlay  prj.conf  readmefirst.md
DSP_FFT/src/: main.c
adc/: nrf52832_mdk.overlay  nrf52dk_nrf52832.overlay  prj.conf  readmefirst.md
adc/src/: main.c
adc_imu_mag_fft_ble_for_beacon/: CMakeLists.txt  nrf52832_mdk.overlay  prj.conf  readme.md  test_a.c
adc_imu_mag_fft_ble_for_beacon/src/: adc.c  ble.c  ble.h  fft.c  fft.h  icm_42688.h  iic_twi.c  imu_bag.c  imu_bag.h  main.c  mymacros.h  soft_iic.c  soft_iic.h  timer.c  timer.h  uart.h
adc_imu_mag_fft_ble_for_beacon_52840/: CMakeLists.txt  nrf52832_mdk.overlay  nrf52840dk_nrf52840.overlay  prj.conf
adc_imu_mag_fft_ble_for_beacon_52840/src/: ads1220.c  ads1220.h  ble.c  ble.h  fft.c  fft.h  main.c  mymacros.h  soft_iic.h  timer.c  timer.h
adc_imu_mag_fft_ble_for_beacon_832/: CMakeLists.txt  filter.c  filter2.c  nrf52832_mdk.overlay  test_a.c  testb.c
adc_imu_mag_fft_ble_for_beacon_832/src/: adc.c  ads1015.c  ads1015.h  ads1220.h  ble.c  fft.c  fft.h  imu_bag.c  imu_bag.h  main.c  mymacros.h  soft_iic.c  timer.c  timer.h  uart.c
broadcaster_multiple_4/: nrf52832_mdk.overlay  nrf52840_mdk.overlay  prj.conf
broadcaster_multiple_4/src/: broadcaster_multiple.c  main.c
echo_bot/: nrf52832_mdk.overlay  nrf52dk_nrf52832.overlay  prj.conf  readmefirst.md
echo_bot/src/: main.c
imu_mag/: 2024413_15_14_55.txt  CMakeLists.txt  nrf52832_mdk.overlay  prj.conf
imu_mag/src/: adc.c  adc.h  iic_twi.h  (+8 more)
imu_mag_2pd/: prj.conf
try_folder/: file1.c  file2.c
(+11 files in other folders)
